--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "askband",
         "Boybands",
         "Oatly",
         "Westlife"
-    ]
+    ],
+    "liveServer.settings.port": 5501
 }
